--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,11 @@
           </ion-menu-toggle>
         </ion-list>
 
+        <ion-item (click)="compartirApp()">
+          <ion-icon slot="start" ios="share-social" md="share-social" ></ion-icon>
+          <ion-label>Compartir</ion-label>
+        </ion-item>
+
         
       </ion-content>
     </ion-menu>
