--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -24,11 +24,11 @@
     <ion-card class="carta">
       <img  style="height: 20vh; width: 40vh;" src="https://www.duoc.cl/wp-content/uploads/2023/09/MicrosoftTeams-image-23-1024x768.jpg" />
       <ion-card-header>
-        <h3 style="color: black;" >Feria San Joaquín Se Vive 2023: el reencuentro de la Innovación, la industria y el futuro</h3>
+        <h3 style="color: white;" >Feria San Joaquín Se Vive 2023: el reencuentro de la Innovación, la industria y el futuro</h3>
         <h5>PUBLICADO EL 1 SEPTIEMBRE, 2023</h5>
       </ion-card-header>
     
-      <ion-button fill="clear">Action 1</ion-button>
+      <ion-button fill="clear">Leer mas </ion-button>
     </ion-card>
  
 
