--- a/src/app/tellevo/tellevo.page.html
+++ b/src/app/tellevo/tellevo.page.html
@@ -1,16 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="micolor">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+    <ion-title slot="start">tellevo</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="arriba"> 
     <ion-button > <ion-icon name="grid" ></ion-icon> </ion-button>
-    <h2> Miguel Ortega</h2>
+    <h2> Bienvenido {{ nombreUsuario }}</h2>
     <ion-button > <ion-icon name="star" ></ion-icon> </ion-button>
   </div>
 
