--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,16 @@
           <ion-label>Compartir</ion-label>
         </ion-item>
 
+        <ion-item (click)="abrirMapa()">
+          <ion-icon slot="start" ios="map" md="map"></ion-icon>
+          <ion-label>Mapa</ion-label>
+        </ion-item>
+        
+        <ion-item (click)="cerrarSesion()">
+          <ion-icon slot="start" ios="exit" md="exit"></ion-icon>
+          <ion-label>Cerrar Sesión</ion-label>
+        </ion-item>
+
         
       </ion-content>
     </ion-menu>
