--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -5,14 +5,14 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form>
+  <form [formGroup]="formularioLogin">
     <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" placeholder="usuario@empresa.cl" required></ion-input>
+      <ion-label position="floating">Nombre de usuario</ion-label>
+      <ion-input formControlName="nombre" type="text" placeholder="usuario@empresa.cl" required></ion-input>
     </ion-item>
     <ion-item lines="full">
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password" placeholder="ingresar contraseña" required></ion-input>
+      <ion-input formControlName="contrasena" type="password" placeholder="ingresar contraseña" required></ion-input>
     </ion-item>
     <ion-row>
       <ion-col>
