--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -9,30 +9,22 @@
 
 <ion-content>
   <img class="img" src="https://img.freepik.com/vector-premium/icono-conductor-empresario-personaje-plano-volante_176411-4417.jpg?w=2000"  >
-  <form>
+  <form [formGroup]="formularioLogin">
     <ion-item lines="full">
       <ion-label position="floating">Nombre(s)</ion-label>
-      <ion-input type="text" required></ion-input>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label position="floating">Apellido(s)</ion-label>
-      <ion-input type="text" required></ion-input>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
+      <ion-input formControlName="nombre" type="text" required></ion-input>
     </ion-item>
     <ion-item lines="full">
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password" required></ion-input>
+      <ion-input formControlName="contrasena" type="password" required></ion-input>
     </ion-item>
     <ion-item lines="full">
       <ion-label position="floating">Repita contraseña</ion-label>
-      <ion-input type="password" required></ion-input>
+      <ion-input formControlName="confirmar_contrasena" type="password" required></ion-input>
     </ion-item>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Registrar</ion-button>
+        <ion-button type="submit" color="danger" expand="block" (click)="registrar()">Registrar</ion-button>
       </ion-col>
     </ion-row>
   </form>
