--- a/src/app/registro-ruta/registro-ruta.page.html
+++ b/src/app/registro-ruta/registro-ruta.page.html
@@ -10,27 +10,26 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item>
-      <ion-label position="stacked">Punto de inicio</ion-label>
-      <ion-input type="text" placeholder="Ingrese el punto de inicio"></ion-input>
+      <ion-input class="input" type="number" labelPlacement="floating" placeholder="Ingrese el costo por persona">
+        <div slot="label">Costo por persona</div>
+      </ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Punto de destino</ion-label>
-      <ion-input type="text" placeholder="Ingrese el punto de destino"></ion-input>
+      <ion-input class="input" type="number" labelPlacement="floating" placeholder="Ingrese el numero de espacios disponibles">
+        <div slot="label">Número de espacio</div>
+      </ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Costo por persona</ion-label>
-      <ion-input type="number" placeholder="Ingrese el costo total"></ion-input>
+      <ion-input class="input" type="text" labelPlacement="floating" placeholder="Ingrese la descripcion del viaje">
+        <div slot="label">Descripcion</div>
+      </ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Número de Personas</ion-label>
-      <ion-input type="number" placeholder="Ingrese el número de personas"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Descripcion</ion-label>
-      <ion-input type="number" placeholder="Ingrese descripcion"></ion-input>
+      <ion-input class="input" type="text" labelPlacement="floating" placeholder="Ingrese el punto de destino">
+        <div slot="label">Punto de destino</div>
+      </ion-input>
     </ion-item>
   </ion-list>
-  <img src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" alt="" style="width: 50%;" >
 
   <ion-button expand="full" color="primary">
     Guardar Ruta
