--- a/src/app/registro-ruta/registro-ruta.page.html
+++ b/src/app/registro-ruta/registro-ruta.page.html
@@ -24,15 +24,8 @@
         <div slot="label">Descripcion</div>
       </ion-input>
     </ion-item>
-    <ion-item>
-      <ion-input class="input" type="text" labelPlacement="floating" placeholder="Ingrese el punto de destino">
-        <div slot="label">Punto de destino</div>
-      </ion-input>
-    </ion-item>
   </ion-list>
 
-  <ion-button expand="full" color="primary">
-    Guardar Ruta
-  </ion-button>
+  <ion-button expand="full" color="primary"> Guardar Ruta </ion-button>
 
 </ion-content>
