--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -6,7 +6,26 @@
   </ion-header>
 
   <div #map id="map"></div>
-	<input type="text"  [(ngModel)]="end" (input)="updateSearchResults()" placeholder="Destino">
+  <br>
+  <ion-searchbar type="text"  [(ngModel)]="end" (input)="updateSearchResults()" placeholder="Destino" > </ion-searchbar>
+  <ion-list>
+    <ion-item>
+      <ion-input class="input" type="number" labelPlacement="floating" placeholder="Ingrese el costo por persona">
+        <div slot="label">Costo por persona</div>
+      </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input class="input" type="number" labelPlacement="floating" placeholder="Ingrese el numero de espacios disponibles">
+        <div slot="label">Número de espacio</div>
+      </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input class="input" type="text" labelPlacement="floating" placeholder="Ingrese la descripcion del viaje">
+        <div slot="label">Descripcion</div>
+      </ion-input>
+    </ion-item>
+  </ion-list>
+  <br>
 	<ion-list *ngIf="autocompleteItems" [hidden]="autocompleteItems.length == 0">
       		<ion-item *ngFor="let item of autocompleteItems" tappable (click)="selectSearchResult(item)">
         		{{ item.description }}
