--- a/src/app/tellevo/tellevo.page.html
+++ b/src/app/tellevo/tellevo.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="micolor">
-    <ion-title slot="start">tellevo</ion-title>
+    <ion-title slot="start">Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -41,28 +41,8 @@
         </div>
       </div>
     </ion-card>
-    <ion-card class="flip-card">
-      <div class="flip-card-inner">
-        <div class="flip-card-front">
-          <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
-          <ion-card-header>
-            <ion-card-title>Miguel</ion-card-title>
-            <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
-          </ion-card-header>
-        </div>
-        <div class="flip-card-back">
-          <ion-card-header>
-            <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
-          </ion-card-header>
-          <ion-card-content>
-            <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
-          </ion-card-content>
-        </div>
-      </div>
-    </ion-card>
   </div>
-  
+
 
   <!-- <h3>Noticias</h3>
     <ion-card class="carta">
