--- a/src/app/viajes/viajes.page.html
+++ b/src/app/viajes/viajes.page.html
@@ -9,98 +9,86 @@
 
 <ion-content [fullscreen]="true">
 
-  <div id="conteiner">
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-card class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
-                <ion-card-header>
-                  <ion-card-title>Miguel</ion-card-title>
-                  <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
-                </ion-card-header>
-              </div>
-              <div class="flip-card-back">
-                <ion-card-header>
-                  <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
-                </ion-card-header>
-                <ion-card-content>
-                  <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-                  <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
-                </ion-card-content>
-              </div>
-            </div>
-          </ion-card>
-        </ion-col>
-        <ion-col>
-          <ion-card class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
-                <ion-card-header>
-                  <ion-card-title>Esteban</ion-card-title>
-                  <ion-card-subtitle>Melipilla - Santiago </ion-card-subtitle>
-                </ion-card-header>
-              </div>
-              <div class="flip-card-back">
-                <ion-card-header>
-                  <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
-                </ion-card-header>
-                <ion-card-content>
-                  <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-                  <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
-                </ion-card-content>
-              </div>
-            </div>
-          </ion-card>
-        </ion-col>
-        <ion-col>
-          <ion-card class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
-                <ion-card-header>
-                  <ion-card-title>Nicolas</ion-card-title>
-                  <ion-card-subtitle>Melipilla - San Antonio </ion-card-subtitle>
-                </ion-card-header>
-              </div>
-              <div class="flip-card-back">
-                <ion-card-header>
-                  <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
-                </ion-card-header>
-                <ion-card-content>
-                  <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-                  <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
-                </ion-card-content>
-              </div>
-            </div>
-          </ion-card>
-        </ion-col>
-        <ion-col>
-          <ion-card class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
-                <ion-card-header>
-                  <ion-card-title>Camila</ion-card-title>
-                  <ion-card-subtitle>Melipilla - El Monte </ion-card-subtitle>
-                </ion-card-header>
-              </div>
-              <div class="flip-card-back">
-                <ion-card-header>
-                  <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
-                </ion-card-header>
-                <ion-card-content>
-                  <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-                  <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
-                </ion-card-content>
-              </div>
-            </div>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+  <div class="contenedor" >
+    <ion-card class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
+          <ion-card-header>
+            <ion-card-title>Miguel</ion-card-title>
+            <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
+          </ion-card-header>
+        </div>
+        <div class="flip-card-back">
+          <ion-card-header>
+            <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
+          </ion-card-header>
+          <ion-card-content>
+            <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
+            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+          </ion-card-content>
+        </div>
+      </div>
+    </ion-card>
+    <ion-card class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
+          <ion-card-header>
+            <ion-card-title>Miguel</ion-card-title>
+            <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
+          </ion-card-header>
+        </div>
+        <div class="flip-card-back">
+          <ion-card-header>
+            <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
+          </ion-card-header>
+          <ion-card-content>
+            <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
+            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+          </ion-card-content>
+        </div>
+      </div>
+    </ion-card>
+    <ion-card class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
+          <ion-card-header>
+            <ion-card-title>Miguel</ion-card-title>
+            <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
+          </ion-card-header>
+        </div>
+        <div class="flip-card-back">
+          <ion-card-header>
+            <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
+          </ion-card-header>
+          <ion-card-content>
+            <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
+            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+          </ion-card-content>
+        </div>
+      </div>
+    </ion-card>
+    <ion-card class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img alt="Silhouette of mountains" src="https://appassets.mvtdev.com/map/188/l/642/595288/1623235.jpg" />
+          <ion-card-header>
+            <ion-card-title>Miguel</ion-card-title>
+            <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
+          </ion-card-header>
+        </div>
+        <div class="flip-card-back">
+          <ion-card-header>
+            <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
+          </ion-card-header>
+          <ion-card-content>
+            <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
+            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+          </ion-card-content>
+        </div>
+      </div>
+    </ion-card>
   </div>
 </ion-content>
