--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header style="background-color: #0cbccc;">
   <ion-toolbar color="micolor">
     <ion-title>Inicio de Sesion</ion-title>
   </ion-toolbar>
@@ -23,10 +23,10 @@
     </ion-row>
   </form>
 
-  
 
-  
 
-</ion-content> 
+
+
+</ion-content>
 
 
