--- a/src/app/viajes/viajes.page.scss
+++ b/src/app/viajes/viajes.page.scss
@@ -1,33 +1,35 @@
-ion-toolbar{
-    background-color: var(--ion-color-micolor);
-  }
+ion-content{
+  --ion-background-color: #107acc;
+}
+
+
 
   ion-card{
     border-radius: 40px;
     border: 5px solid
   }
   ion-grid{
-    
+
     display: flex;
   }
-//Carta que gira 
+//Carta que gira
   .flip-card {
     margin: 15px;
     padding: 0;
     width: 160px;
     height: 350px;
-  
+
     .flip-card-inner {
       width: 100%;
       height: 100%;
       transform-style: preserve-3d;
       transition: transform 0.5s;
-  
+
       &:hover {
         transform: rotateY(180deg);
       }
     }
-  
+
     .flip-card-front,
     .flip-card-back {
       width: 100%;
@@ -41,7 +43,7 @@ ion-toolbar{
       border: 1px solid #ccc;
       background-color: #fff;
     }
-  
+
     .flip-card-back {
       transform: rotateY(180deg);
     }
