--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header style="background-color: #0cbccc;">
   <ion-toolbar color="micolor">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="arriba"> 
+  <div class="arriba">
     <ion-button > <ion-icon name="grid" ></ion-icon> </ion-button>
     <h2> Miguel Ortega</h2>
     <ion-button > <ion-icon name="star" ></ion-icon> </ion-button>
@@ -27,7 +27,7 @@
         <h3 style="color: white;" >Feria San Joaquín Se Vive 2023: el reencuentro de la Innovación, la industria y el futuro</h3>
         <h5>PUBLICADO EL 1 SEPTIEMBRE, 2023</h5>
       </ion-card-header>
-    
+
       <ion-button fill="clear">Leer mas </ion-button>
     </ion-card>
 </ion-content>
