--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,7 +1,7 @@
 ion-menu-button {
     color: var(--ion-color-primary);
   }
-  
+
   #container {
     text-align: center;
     position: absolute;
@@ -10,23 +10,24 @@ ion-menu-button {
     top: 50%;
     transform: translateY(-50%);
   }
-  
+
   #container strong {
     font-size: 20px;
     line-height: 26px;
   }
-  
+
   #container p {
     font-size: 16px;
     line-height: 22px;
     color: #8c8c8c;
     margin: 0;
   }
-  
+
   #container a {
     text-decoration: none;
   }
-  ion-toolbar{
-    background-color: var(--ion-color-micolor);
+
+  ion-content{
+    --ion-background-color: #107acc;
   }
-  
+
