--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -1,5 +1,6 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header style="background-color: #0cbccc;" collapse="condense">
+
     <ion-toolbar>
       <ion-title size="large">mapa</ion-title>
     </ion-toolbar>
@@ -31,5 +32,5 @@
 <br>
   <div #map id="map"></div>
 
-	
+
 </ion-content>
