--- a/src/app/registro-ruta/registro-ruta.page.scss
+++ b/src/app/registro-ruta/registro-ruta.page.scss
@@ -7,7 +7,7 @@ ion-header {
       font-size: 24px;
     }
   }
-  
+
 
   ion-content {
     ion-list {
@@ -17,13 +17,13 @@ ion-header {
         }
       }
     }
-  
+
     ion-button {
-      --background: #007bff; 
-      --color: #fff; 
+      --background: #007bff;
+      --color: #fff;
       margin-top: 10px;
     }
-  
+
     ion-item {
       input[type="file"] {
         margin-bottom: 5px;
@@ -32,7 +32,8 @@ ion-header {
       }
     }
   }
-  
-  ion-toolbar{
-    background-color: var(--ion-color-micolor);
+
+  ion-content{
+    --ion-background-color: #107acc;
   }
+
