--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -1,6 +1,8 @@
-ion-toolbar{
-    background-color: var(--ion-color-micolor);
-  }
+ion-content{
+  --ion-background-color: #107acc;
+}
+
+
 
 .img{
   display: flex;
