--- a/src/app/viajes/viajes.page.html
+++ b/src/app/viajes/viajes.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header style="background-color: #0cbccc;">
   <ion-toolbar color="micolor">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
