--- a/src/app/tellevo/tellevo.page.scss
+++ b/src/app/tellevo/tellevo.page.scss
@@ -11,7 +11,7 @@ ion-menu-button {
 
   .arriba{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   .titulo{
