--- a/src/app/tellevo/tellevo.page.html
+++ b/src/app/tellevo/tellevo.page.html
@@ -40,9 +40,9 @@
           <ion-card-header>
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
-          <ion-card-content>
+          <ion-card-content style="width: 120px;">
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar</ion-button>
           </ion-card-content>
         </div>
       </div>
@@ -60,9 +60,9 @@
           <ion-card-header>
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
-          <ion-card-content>
+          <ion-card-content style="width: 120px;">
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar</ion-button>
           </ion-card-content>
         </div>
       </div>
