--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Tebi app</ion-list-header>
-          <ion-note>tebiapps@gmail.com</ion-note>
+          <ion-list-header>Tellevoapoapps</ion-list-header>
+          <ion-note>tellevoapps@duocuc.cl</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
@@ -23,13 +23,13 @@
           <ion-icon slot="start" ios="map" md="map"></ion-icon>
           <ion-label>Mapa</ion-label>
         </ion-item>
-        
+
         <ion-item (click)="cerrarSesion()">
           <ion-icon slot="start" ios="exit" md="exit"></ion-icon>
           <ion-label>Cerrar Sesión</ion-label>
         </ion-item>
 
-        
+
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
