--- a/src/app/tellevo/tellevo.page.html
+++ b/src/app/tellevo/tellevo.page.html
@@ -35,10 +35,10 @@
           </ion-card-header>
         </div>
         <div class="flip-card-back">
-          <ion-card-header>
+          <ion-card-header id="pasajeroImagen">
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
-          <ion-card-content style="width: 120px;">
+          <ion-card-content>
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
             <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar</ion-button>
           </ion-card-content>
@@ -55,12 +55,12 @@
           </ion-card-header>
         </div>
         <div class="flip-card-back">
-          <ion-card-header>
+          <ion-card-header id="pasajeroImagen">
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
-          <ion-card-content style="width: 120px;">
+          <ion-card-content>
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar</ion-button>
+            <ion-button id="solicitar" [routerLink]="['/']" expand="block" color="danger">Solicitar</ion-button>
           </ion-card-content>
         </div>
       </div>
