--- a/src/app/viajes/viajes.page.html
+++ b/src/app/viajes/viajes.page.html
@@ -20,7 +20,7 @@
           </ion-card-header>
         </div>
         <div class="flip-card-back">
-          <ion-card-header>
+          <ion-card-header id="pasajeroImagen">
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
           <ion-card-content>
@@ -40,7 +40,7 @@
           </ion-card-header>
         </div>
         <div class="flip-card-back">
-          <ion-card-header>
+          <ion-card-header id="pasajeroImagen">
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
           <ion-card-content>
@@ -60,7 +60,7 @@
           </ion-card-header>
         </div>
         <div class="flip-card-back">
-          <ion-card-header>
+          <ion-card-header id="pasajeroImagen">
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
           <ion-card-content>
@@ -79,8 +79,8 @@
             <ion-card-subtitle>Melipilla - Bollenar </ion-card-subtitle>
           </ion-card-header>
         </div>
-        <div class="flip-card-back">
-          <ion-card-header>
+        <div class="flip-card-back" >
+          <ion-card-header id="pasajeroImagen">
             <img alt="Silhouette of mountains" src="https://img.freepik.com/fotos-premium/mono-vestido-traje-negocios-formal_847288-285.jpg?w=2000" />
           </ion-card-header>
           <ion-card-content>
