--- a/src/app/tellevo/tellevo.page.scss
+++ b/src/app/tellevo/tellevo.page.scss
@@ -2,17 +2,32 @@ ion-content{
   --ion-background-color: #107acc;
 }
 
-ion-card-content > p{
-  font-size: .8rem;
+.flip-card-front > img{
+  width: 200px;
 }
 
-ion-card-button{
-  width: 10px;
+#pasajeroImagen > img{
+  width: 130px;
+}
+
+#solicitar{
+  padding: 0px 40px;
+}
+
+ion-card{
+  border-radius: 40px;
+  border: 5px solid
+}
+
+
+ion-card-content > p{
+  font-size: .8rem;
 }
 
 ion-menu-button {
     color: var(--ion-color-primary);
   }
+
 
 
   .arriba{
@@ -36,41 +51,48 @@ ion-menu-button {
     flex-direction: column;
   }
 //Carta que gira
-  .flip-card {
-    margin: 15px;
-    padding: 0;
-    width: 130px;
-    height: 300px;
+.flip-card {
+  margin: 15px;
+  padding: 0;
+  width: 260px;
+  height: 280px;
+}
 
-    .flip-card-inner {
-      width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-      transition: transform 0.5s;
+  .flip-card-inner {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
 
-      &:hover {
-        transform: rotateY(180deg);
-      }
-    }
-
-    .flip-card-front,
-    .flip-card-back {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      backface-visibility: hidden;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      border: 1px solid #ccc;
-      background-color: #fff;
-    }
-
-    .flip-card-back {
+    &:hover {
       transform: rotateY(180deg);
     }
   }
+
+  .flip-card-front,
+  .flip-card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ccc;
+    background-color: #fff;
+  }
+
+  .flip-card-back {
+    transform: rotateY(180deg);
+  }
+
+
+.contenedor{
+display: flex;
+flex-wrap: wrap;
+}
+
 
   #clima{
     display: flex;
