afinamineto card y botones

--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -31,6 +31,6 @@
 </ion-list>
 <br>
   <div #map id="map"></div>
-
+  <ion-button expand="full" color="primary" href="/tellevo"> Guardar Ruta </ion-button>
 
 </ion-content>
