--- a/src/app/viajes/viajes.page.html
+++ b/src/app/viajes/viajes.page.html
@@ -25,7 +25,7 @@
           </ion-card-header>
           <ion-card-content>
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+            <ion-button [routerLink]="['/tellevo']" expand="block" color="danger">Solicitar viaje</ion-button>
           </ion-card-content>
         </div>
       </div>
@@ -45,7 +45,7 @@
           </ion-card-header>
           <ion-card-content>
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+            <ion-button [routerLink]="['/tellevo']" expand="block" color="danger">Solicitar viaje</ion-button>
           </ion-card-content>
         </div>
       </div>
@@ -65,7 +65,7 @@
           </ion-card-header>
           <ion-card-content>
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+            <ion-button [routerLink]="['/tellevo']" expand="block" color="danger">Solicitar viaje</ion-button>
           </ion-card-content>
         </div>
       </div>
@@ -85,7 +85,7 @@
           </ion-card-header>
           <ion-card-content>
             <p> Hola, me dirijo desde el lider de vicuña mackena hasta metro bellas artes salgo desde casa 17:30</p>
-            <ion-button [routerLink]="['/']" expand="block" color="danger">Solicitar viaje</ion-button>
+            <ion-button [routerLink]="['/tellevo']" expand="block" color="danger">Solicitar viaje</ion-button>
           </ion-card-content>
         </div>
       </div>
